--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-html, body, #root { height: max-content; }
+html, body, #root { height: 100vh; }
 
 body {
   margin: 0;
@@ -143,12 +143,18 @@ th, td {
 td.actions {
   max-width: 120px;
   min-width: 100%;
+  display: flex;
   flex: 1 1 100px;
   flex-direction: row;
   justify-content: center;
   align-items: stretch;
   min-height: 100%!important;
   padding: 8px;
+}
+
+button * {
+  margin: 5px;
+  color: #ffffff;
 }
 
 @media screen and (max-width: 563px) {
@@ -172,12 +178,28 @@ td.actions {
     min-width: max-content;
   }
   
-  td button i {
-    display: block;
+  td button svg {
+    display: flex!important;
   }
 
   td button span {
     display: none;
+  }
+}
+
+@media screen and (min-width: 373px) {
+  td button svg {
+    display: none!important;
+  }
+
+  td button span {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 756px) {
+  td button {
+    width: 80%;
   }
 }
 
@@ -210,6 +232,10 @@ button {
   text-align: center;
   display: inline-block;
   margin: 5px 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 button.remove {
@@ -225,9 +251,25 @@ button.edit {
 }
 
 button.create {
-  background: #16b398;
+  background: linear-gradient(145deg, MediumSeaGreen, #16b398);
   color: black;
   transition: 1s;
+}
+
+.pagination button:not(.index) {
+  background: linear-gradient(145deg, SlateBlue, DodgerBlue);
+}
+
+.pagination button:not(.index):hover {
+  background: linear-gradient(145deg, MediumSeaGreen, DodgerBlue);
+}
+
+.pagination button.currentPage {
+  background: linear-gradient(145deg, MediumSeaGreen, #e07319);
+}
+
+.pagination button.currentPage:hover {
+  background: linear-gradient(145deg, #e07319, DodgerBlue);
 }
 
 button:hover {
@@ -259,6 +301,7 @@ td.id {
 
 tr.controls {
   display: flex;
+  min-width: 100%;
   width: 100%;
   flex-direction: row;
   align-items: center;
@@ -266,9 +309,41 @@ tr.controls {
   padding: 10px 0;
 }
 
+tr.controls div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+tr.controls * {
+  display: flex;
+  flex-direction: row;
+}
+
 tr.controls button {
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   position: relative;
+}
+
+@media screen and (max-width: 757px) {
+  tr.controls {
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  tr.controls .create span {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 758px) {
+  tr.controls .create span {
+    display: flex;
+  }
 }
 
 td:not(.id):not(.actions) {
@@ -336,51 +411,66 @@ footer .rev-content a {
   }
 }
 
-.userFormBackground {
+.popupBackground {
+  display: flex;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.6);
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.userFormPanel {
+.popupPanel {
   position: relative;
-  width: 60%;
-  height: 50%;
+  width: 50%;
+  padding: 0;
+  height: 30%;
   background-color: #e4e4e4;
   border-radius: 8px;
   box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2), 0 6px 16px 0 rgba(0, 0, 0, 0.19);
 }
 
-.userForm-topPanel {
+.popupTopBar {
   width: 100%;
   border-bottom: 1px solid #cecece;
   justify-content: flex-end;
+  align-items: center;
+  border-radius: 0 8px 8px 0;
+  flex-direction: row;
 }
 
-.userForm-topPanel,
-.userForm-topPanel-close {
+.popupContent {
+  width: 100%;
+  height: 100%;
+}
+
+.popupTopBar,
+.popupTopBarClose {
   display: flex;
   height: 20px;
-  flex-direction: row;
+  min-height: 20px;
+  max-height: 20px;
   align-items: center;
   margin: 0;
-  padding: 0;
-  border-radius: 8px 0;
 }
 
-.userForm-topPanel-close {
-  background-color: #b51313;
+.popupTopBarClose {
+  background: linear-gradient(145deg, #b51313, #d00000);
   width: 20px;
   justify-content: center;
+  border-radius: 0 8px 0 0;
+  padding: 0;
 }
 
-.userForm-lowerPanel {
+.popupTopBarClose:hover {
+  background: linear-gradient(145deg, #ef1818, #d00000);
+}
+
+.userFormLowerPanel {
   display: flex;
   align-self: flex-end;
   width: 100%;
@@ -392,23 +482,31 @@ footer .rev-content a {
   padding: 0;
 }
 
-.userForm-lowerPanel button.create {
+.userFormLowerPanel button.create {
   display: flex;
 }
 
-.userFormBackground .active, 
-.userFormPanel .active {
-  display: flex;
-}
-
-.userFormBackground .disabled, 
-.userFormPanel .disabled {
-  display: none;
-}
-
-.userFormPanel form {
+.popupContent form {
+  width: 100%;
+  padding: 30px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+}
+
+.popupContent form input {
+  width: 80%;
+  height: 15px;
+  background-color: #fefefe;
+  border: none;
+  padding: 10px;
+  border-radius: 8px;
+  margin-top: 5px;
+}
+
+.popupContent form .userFormLowerPanel {
+  width: 100%;
+  margin-top: 30px;
+  padding: 5px 0;
 }
